# chart-js-wrapper-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: chrono_axis.rs  colour.rs  common.rs  data.rs  lib.rs  options.rs  render.rs  serde.rs  time_axis.rs
templates/: chart.stpl  one_page_chart.stpl
tests/: display_chart.rs
tests/common/: mod.rs
