[package]
name = "chart-js-wrapper-rust"
version = "0.0.2"
edition = "2024"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "Wrapper for Chart.js for server-side rendering"
keywords = ["chart-js", "javascript", "web"]
repository = "https://github.com/ArseniiRudenko/chart-js-wrapper-rust"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sailfish = { version = "0.9.0", features = ["derive", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
num-traits = "0.2.19"
ndarray = "0.16"
ndarray-linalg = { version = "0.17", features = ["openblas"] }


[dev-dependencies]
pretty_assertions = "1.4.1"
tiny_http = "0.12"
open = "5.0"
