[package]
name = "chart-js-wrapper"
version = "0.0.4"

edition = "2024"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "Wrapper for Chart.js for server-side rendering"
keywords = ["chart-js", "javascript", "web"]
repository = "https://github.com/ArseniiRudenko/chart-js-wrapper-rust"
readme = "README.md"
license = "MIT"

[features]
default = []
time_axis = ["time"]
chrono_axis= ["chrono"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sailfish = { version = "0.10.0", features = ["derive", "json"] }
uuid = { version = "1.18.1", features = ["v4"] }
ndarray = "0.16"
ndarray-linalg = { version = "0.17", features = ["openblas"] }
time = { version = "0.3", features = ["serde"] , optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tiny_http = "0.12"
open = "5.0"
